# etl-demo

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  add_file_source.py  main.py  pyproject.toml
dw-demo/: docker-compose.yml
etl/: cntrl.py  core.py  dba.py  dbs.py  fil.py  sys.py
etl/steps/: __init__.py  base.py  check_for_inbox_files.py
migrations/: env.py
migrations/versions/: 64d1c82f82f5_add_filetype_to_ctl_file_sources.py  6a9cfbcfe36c_setup_http_sources_table.py  de21b5591edd_.py  e8ba08948a48_setup_filesources_table.py
